# ntec

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
ntec/: Classifiers.py  __init__.py  clean_name.py
ntec/models/joeg/: joeg_architecture.json  joeg_classes.json  joeg_params.json
tests/: helpers.py  test_ntec.py
